<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StartActivity"
    android:background="@color/colorPrimary">

    <TextView
        android:id="@+id/welcomeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="230dp"
        android:text="@string/welcome"
        android:textSize="30sp"
        android:textColor="@color/lightTextColor"/>

    <Button
        android:id="@+id/toRegisterButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/welcomeTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:text="@string/register_on_start"
        android:background="@drawable/start_screen_button"
        android:textColor="@color/lightTextColor"
        android:textSize="15sp"
        android:padding="10dp"/>

    <Button
        android:id="@+id/toSignInButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/toRegisterButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:background="@drawable/start_screen_button"
        android:padding="10dp"
        android:text="@string/sign_in_on_start"
        android:textColor="@color/lightTextColor"
        android:textSize="15sp" />
</RelativeLayout>