<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include
            android:id="@+id/reg_toolbar"
            layout="@layout/app_bar_layout" />
    </android.support.design.widget.AppBarLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        android:fillViewport="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:layout_marginBottom="23dp"
        android:layout_centerHorizontal="true"
        android:fontFamily="sans-serif-black"
        android:text="@string/registration_textView"
        android:textColor="@color/lightTextColor"
        android:textSize="50sp"
        android:visibility="visible"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/email_field_reg"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_below="@id/textView"
        android:layout_centerHorizontal="true"
        android:backgroundTint="@color/hintColor"
        android:ems="10"
        android:hint="@string/reg_email"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:textColor="@color/lightTextColor"
        android:textColorHint="@color/hintColor"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/reg_name_field"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_below="@id/email_field_reg"
        android:layout_centerHorizontal="true"
        android:backgroundTint="@color/hintColor"
        android:ems="10"
        android:hint="@string/reg_name"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:textColor="@color/lightTextColor"
        android:textColorHint="@color/hintColor"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/password_field"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_below="@id/reg_name_field"
        android:layout_centerHorizontal="true"
        android:backgroundTint="@color/hintColor"
        android:ems="10"
        android:hint="Пароль"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColor="@color/lightTextColor"
        android:textColorHint="@color/hintColor"
        android:textSize="20dp" />

    <EditText
        android:id="@+id/password_field2"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_below="@id/password_field"
        android:layout_centerHorizontal="true"
        android:backgroundTint="@color/hintColor"
        android:ems="10"
        android:hint="Повторите пароль"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColor="@color/lightTextColor"
        android:textColorHint="@color/hintColor"
        android:textSize="20sp" />




    <Button
        android:id="@+id/registerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/password_field2"
        android:layout_marginTop="40dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/login_button"
        android:text="Вперед!"
        android:textColor="@color/lightTextColor" />
        </RelativeLayout>

    </ScrollView>

</RelativeLayout>